# gate

./: CONTRIBUTING.md  Cargo.toml  DAEMON_REFACTOR_PLAN.md  README.md  flake.nix  yew-cargo-toml.patch
.github/workflows/: ci.yml  dependabot-auto-merge.yml  update-flake.yml
crates/chat-ui/src/: styles.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  state.rs  types.rs
crates/core/src/access/: mod.rs  permissions.rs
crates/core/src/router/: connector.rs  credentials.rs  executor.rs  index.rs  mod.rs  plan.rs  prelude.rs  record.rs  registry.rs  routing.rs  service.rs  signals.rs  sink.rs  tests.rs  transport.rs  types.rs
crates/core/src/router/connectors/: mock.rs  mod.rs
crates/core/src/router/middleware/: cost_tracker.rs  key_capture.rs  mod.rs  monitor.rs  rate_limit.rs
crates/core/src/router/protocols/: capabilities.rs  convert.rs  mod.rs
crates/core/src/router/sinks/: mock.rs  mod.rs
crates/core/src/router/strategy/: best_of_n.rs  cost.rs  latency.rs  mod.rs  provider_affinity.rs  weighted.rs
crates/core/src/tests/: state.rs
crates/core/src/tracing/: correlation.rs  init.rs  trace_context.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  minimal_state.rs  permissions.rs  router.rs  server.rs  state.rs  state_dir.rs  types.rs
crates/daemon/src/connectors/: catgrad_connector.rs  mod.rs
crates/daemon/src/daemon/: actor.rs  builder.rs  inner.rs  mod.rs  rpc.rs  server.rs
crates/daemon/src/helpers/: admin.rs  errors.rs  mod.rs  services.rs
crates/daemon/src/routes/: admin.rs  auth.rs  config.rs  mod.rs  status.rs
crates/daemon/src/runtime/: builder.rs  helpers.rs  inner.rs  mod.rs
crates/daemon/tests/: routes_build.rs
crates/frontend-common/: Cargo.toml
crates/frontend-common/src/: client.rs  client_wrapper.rs  lib.rs
crates/frontend-daemon/: Cargo.toml  index.html  style.css
crates/frontend-daemon/src/: lib.rs  local_app.rs  local_auth.rs  main.rs  onboarding.rs
crates/frontend-relay/: style.css
crates/frontend-tauri/: style.css
crates/frontend-tauri/src/: tauri_api.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/src/: commands.rs  main.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: error.rs  lib.rs  state.rs  streaming.rs  types.rs
crates/http/tests/: client_tests.rs  integration_test.rs  routes_build.rs
crates/p2p/src/: router.rs  stream.rs
crates/sqlx/migrations/: 0004_user_status.sql
crates/sqlx/src/: common.rs  lib.rs  sqlite.rs
crates/tlsforward/: Cargo.toml
(+94 files in other folders)
